k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrcode-deployment
  namespace: default
  labels:
    tier: application

spec:
  replicas: 2
  selector: 
    matchLabels:
      tier: application

  template:
    metadata:
      labels:
        tier: application
    spec:
      containers:
        - name: qrcode
          image: shehab19/qrcodeapp:mssql
          ports:
            - protocol: TCP
              containerPort: 8080
              name: qrcode
