k8s/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qrcode-service
  namespace: default
spec:
  type: NodePort
  ports:
  - nodePort: 30080
    targetPort: 8080
    port: 80
  selector:
    tier: application
