k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qrcode-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: qrcode.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qrcode-service
                port:
                  number: 80
